--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,32 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-    font-family: "Roboto";
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    
+
+  font-family: "Roboto";
+  background-color: #0E0E0E;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/* Dark default theme */
+:root {
+  --text-primary: #C3C3C3;
+  --text-secondary: #797979;
+  --bg-primary: #0E0E0E;
+  --bg-secondary: #1A1A1A;
+  --bg-nav: #080808;
+  --primary-color: #F5C518;
+  --secondary-color: #D8C882;
+  --tertiary-color: #42BDDA;
+}
+
+.container {
+  max-width: 1400px;
+  margin: 0 auto;
 }
